--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 
                 <div style="padding: 0;" class="col-xl-2 col-lg-2 col-md-2 col-sm-0 col-0 header_contact_button">
                     <button onclick="window.location.href='tel:+971503524424'">
-                        +971 503524424
+                        <i class="fa-solid fa-phone"></i> +971 503524424
                     </button>
                 </div>
                 <div style="padding: 0;" class="col-xl-1 col-lg-1 col-md-1 col-sm-0 col-0 nav_social_col">
@@ -154,7 +154,7 @@
                 </div>
                 <a href="#">Blogs</a> <br>
                 <a href="contact.html">Contact Us</a> <br><br>
-                <a href="tel:+971503524424"> &nbsp; &nbsp;+971 503524424</a> <br>
+                <a href="tel:+971503524424"> &nbsp; &nbsp;<i class="fa-solid fa-phone"></i>+971 503524424</a> <br>
 
             </div>
         </header>
