--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -154,7 +154,7 @@
                 </div>
                 <a href="#">Blogs</a> <br>
                 <a href="contact.html">Contact Us</a> <br><br>
-                <a href="tel:+971503524424"> &nbsp; &nbsp;+971 503524424</a> <br>
+                <a href="tel:+971503524424"> &nbsp; &nbsp;<i class="fa-solid fa-phone"></i>+971 503524424</a> <br>
             </div>
         </header>
 
