--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -33,6 +33,16 @@
     <meta name="robots" content="noindex, nofollow" />
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-846TB3YMGF"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-846TB3YMGF');
+</script>
+
 <body>
     <header>
         <div class="row">
