--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -32,14 +32,16 @@
 
     <meta name="robots" content="noindex, nofollow" />
 
+
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-846TB3YMGF"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16617021949">
+    </script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-846TB3YMGF');
+        gtag('config', 'AW-16617021949');
     </script>
 </head>
 
