--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -22,6 +22,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Jomhuria&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16617021949">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16617021949');
+    </script>
 </head>
 
 <body>
@@ -324,8 +335,8 @@
         </div>
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
-                <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy Policy</a> | <a
-                        href="terms-and-conditions.html">Terms of Service</a></p>
+                <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
@@ -341,12 +352,12 @@
 
     <div class="floating_btn">
         <a target="_blank" href="https://wa.me/+971503524424" style="text-decoration: none;">
-          <div class="contact_icon">
-            <i class="fa fa-whatsapp my-float"></i>
-          </div>
+            <div class="contact_icon">
+                <i class="fa fa-whatsapp my-float"></i>
+            </div>
         </a>
         <p class="text_icon">Talk to us?</p>
-      </div>
+    </div>
 
 
 
