--- a/thankyou.html
+++ b/thankyou.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
+    <title>INC- Thankyou</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -23,8 +23,10 @@
         href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Jomhuria&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16617021949"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16617021949">
+    </script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -35,7 +37,7 @@
 </head>
 
 <body>
-    <section class="warehousing_hero">
+    <section class="thankyou_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -166,179 +168,97 @@
                 <a href="contact.html">Contact Us</a> <br><br>
                 <a href="tel:+971503524424"> &nbsp; &nbsp;<i class="fa-solid fa-phone"></i>+971 503524424</a> <br>
             </div>
+            <div class="about_hero-content">
+                <div class="about_hero_content_wrap">
+                    <h1 style="text-align: center; color: #000000;">THANK YOU!</h1>
+                    <p style="text-align: center; color: #000000;">For Contacting INC Express Shipping LLC!</p>
+                </div>
+            </div>
+
+            <div class="thankyou_box_container row">
+                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-0 col-0"></div>
+                <div class="thankyou_box col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                    <h3>We Appreciate Your Interest!</h3>
+                    <p>Thank you for reaching out to INC Express Shipping LLC, the best freight forwarding company in
+                        Dubai, UAE. We are thrilled to have the opportunity to assist you with your logistics,
+                        transport, and warehousing needs. Our team will review your inquiry and get back to you as soon
+                        as possible.</p>
+                </div>
+            </div>
         </header>
+    </section>
 
-        <div class="service_sub_hero">
-            <div class="service_sub_hero_head">
-                <h1>WAREHOUSING</h1>
-            </div>
+    <section class="thankyou_img">
+        <img src="img/avatar514.png" alt="">
+    </section>
+
+    <section class="thankyou_why_choose">
+        <h3 style="font-weight: bold;">Why Choose INC Express?</h3>
+        <ul>
+            <li>Global Reach: Serving over 20 countries with reliable and precise logistics solutions.</li>
+            <li>Personalized Services: Tailored services to meet your unique business requirements.</li>
+            <li>Secure Handling: Ensuring the safety and timely delivery of your consignments.</li>
+            <li>State-of-the-Art Facilities: Advanced warehousing and transport infrastructure.</li>
+            <li>24/7 Support: Dedicated customer support available round-the-clock.</li>
+        </ul>
+        <h3 style="font-weight: bold;">Next Steps :</h3>
+    </section>
+
+    <section class="thankyou_next_steps row">
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 thankyou_next_steps_item">
+            <img src="img/Group 413t.png" alt="">
+            <h6>Review Your Inquiry :</h6>
+            <p>Our team will carefully review
+                the details of your request. </p>
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 thankyou_next_steps_item">
+            <img src="img/Group 414t.png" alt="">
+            <h6>Get in Touch :</h6>
+            <p>We will contact you shortly to discuss
+                your needs and provide
+                personalized solutions.</p>
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 thankyou_next_steps_item">
+            <img src="img/Group 415t.png" alt="">
+            <h6>Collaboration :</h6>
+            <p>Work together to mobilize your
+                cargo with accuracy and speed. </p>
         </div>
     </section>
 
-    <section class="service_sub_sec1">
-        <div class="row">
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-0 col-0 service_sub_sec1_col1">
-                <img src="img/image 241.webp" alt="">
+    <img style="margin-bottom: 4%; width: 100%;" src="img/Vector 57.png" alt="">
+
+    <div style="padding-bottom: 50px;" class="contact_bg row">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 home_contact_col1 animate fadeRight">
+            <div class="home_contact_image">
+                <h5>We look forward to working with you and boosting
+                    your business with our top-notch
+                    logistics services!</h5>
             </div>
-            <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
-                <div class="service_sub_sec1_strip">
-                    <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/warehouse.gif" alt="">
-                        <div class="about_stripline"></div>
-                        <h6>Secured Warehouses</h6>
-                    </div>
-                    <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/warehouse.gif" alt="">
-                        <div class="about_stripline"></div>
-                        <h6>Real-Time Monitoring</h6>
-                    </div>
-                    <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/warehouse.gif" alt="">
-                        <div class="about_stripline"></div>
-                        <h6>Temperature Controlled Care</h6>
-                    </div>
-                </div>
-                <div class="service_sub_sec1_para">
-                    <p>
-                        INC Express offers its clients warehousing solutions including fully integrated systems, staff,
-                        local transportation, inventory management and more. As a leading storage warehouse company in
-                        Dubai, we allow our clients to gain effortless access to process orders and distribute products
-                        quickly and cost-effectively through the mediums that we offer. It also becomes essential for
-                        the customer to pick the most economical storage and warehousing services. The storage units
-                        provided by us are multi-functional and fully secured.
-                        <br> We aim to provide our valued partners with the best storage and warehousing solutions which
-                        are rich in expertise and cost-effective.
-                    </p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 home_contact_col2 animate fadeLeft">
+            <div class="contact_contact_form_container">
+                <div class="c_contact_form">
+                    <h6>We'll be glad to help</h6>
+                    <h3>Leave a message</h3>
+
+                    <form action="contact.php" method="post">
+                        <div class="cpif">
+                            <input type="text" id="name" name="name" placeholder="Your Name">
+                            <input type="text" id="companyName" name="companyName" placeholder="Company Name">
+                        </div>
+                        <div class="cpif">
+                            <input type="text" id="email" name="email" placeholder="Email">
+                        </div>
+                        <textarea rows="4" name="message" id="message" placeholder="Your Message"></textarea>
+                        <button type="submit">SEND</button>
+                    </form>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
 
-
-
-
-
-
-    <section class="service_sub_sec2">
-        <div class="row">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
-                <div class="service_sub_sec2_card1">
-                    <h3>Short and Long Term Options</h3>
-                    <p>
-                        We take into account both short term and long term options for customer's warehousing
-                        requirements.
-                    </p>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
-                <div class="service_sub_sec2_card2">
-                    <h3>DG Goods Handling</h3>
-                    <p>
-                        The most dangerous and hazardous goods are handled easily with care by us for clients from
-                        various industries.
-                    </p>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
-                <div class="service_sub_sec2_card1">
-                    <h3>24/7 CCTV Surveillance</h3>
-                    <p>
-                        24/7 surveillance and CCTV controlling makes our warehousing solutions fully secured.
-                    </p>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
-                <div class="service_sub_sec2_card2">
-                    <h3>Massive storage capacity</h3>
-                    <p>
-                        Our DG agents have specialised skills and knowledge to handle such dangerous goods. Without
-                        anyWe offer excellent warehouse leases for all storage capacities. hassle and chaos, our DG
-                        agents provide substantial care.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <!-- <section class="service_sub_paragaphs animate fadeInUp">
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-        <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-        </p>
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-        <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-        </p>
-    </section> -->
-
-
-    <h2 class="why_us_text">Why Us</h2>
-    <section class="service_sub_sec3">
-        <img src="img/Group 387.webp" alt="">
-        <div class="row service_sub_sec3_card_container cont_bg_9">
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
-                <div class="service_sub_sec3_card">
-                    <div class="service_sub_sec3_card_path">
-                        <h3>Advanced Facility</h3>
-                        <p>
-                            The INC Express Warehouses are equipped with hi-tech machines and components for assisting
-                            the team in supervising.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
-                <div class="service_sub_sec3_card">
-                    <div class="service_sub_sec3_card_path">
-                        <h3>Skilled Team</h3>
-                        <p>
-                            Our Warehouse Management team is proficient in their functioning and provide the best
-                            warehouse organization services and procedures.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
-                <div class="service_sub_sec3_card">
-                    <div class="service_sub_sec3_card_path">
-                        <h3>Efficient Inventory Management</h3>
-                        <p>
-                            We keep a detailed and structured record of all goods and cargo that enters/ exits the
-                            warehouse facility for future references.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-4 col-lg-4 col-md-0 col-sm-0 col-0 animate fadeInUp"></div>
-
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
-                <div class="service_sub_sec3_card">
-                    <div class="service_sub_sec3_card_path">
-                        <h3>Appropriate Location</h3>
-                        <p>
-                            We have cargo monitoring systems equipped with the containers to make sure that all products
-                            and goods are safe and sound.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
-                <div class="service_sub_sec3_card">
-                    <div class="service_sub_sec3_card_path">
-                        <h3>Convenient Storage</h3>
-                        <p>
-                            Our agenda is to fulfill our client's requirements with complete precision and effort to
-                            enhance their satisfaction.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
 
 
