--- a/thankyou.html
+++ b/thankyou.html
@@ -175,9 +175,9 @@
                 </div>
             </div>
 
-            <div class="thankyou_box_container row">
-                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-0 col-0"></div>
-                <div class="thankyou_box col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+            <div style="width: 100% !important;" class="thankyou_box_container row">
+                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1"></div>
+                <div class="thankyou_box col-xl-4 col-lg-4 col-md-4 col-sm-11 col-11">
                     <h3>We Appreciate Your Interest!</h3>
                     <p>Thank you for reaching out to INC Express Shipping LLC, the best freight forwarding company in
                         Dubai, UAE. We are thrilled to have the opportunity to assist you with your logistics,
