--- a/thankyou.html
+++ b/thankyou.html
@@ -25,8 +25,7 @@
 
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16617021949">
-    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16617021949"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
